# Dig-for-Fire

./: .env.example  .gitignore  README.md  build.sh  gitdiff.txt  main.py  pyproject.toml  requirements.txt
Albums/: albums.py
albums/: albums.py
analysis/: analysis.py
digforfire/: api.py  config.py  main.py
digforfire/config/: config.py  config_api.py  config_base.py
digforfire/embeddings/: embeddings.py  genre_space.py  tag_space.py
digforfire/libraries/: __init__.py  converters.py  libraries.py
digforfire/ml/: predictor.py
digforfire/models/: models.py
digforfire/recommender/: explorer.py  fetcher.py  history.py  recommend.py
digforfire/scripts/: add_album.py  import_spotify_library.py  run_api.py
digforfire/static/: fetcher.js  main.js  render.js  style.css
digforfire/static/recommend/: fetcher.js  recommend.js  render.js
digforfire/static/style/: album.css  loader.css  results.css
digforfire/static/user/: fetcher.js  render.js  spotify_setup.js  user.js
digforfire/tags/: MusicBrainz-genres_repo.json  tags.py
digforfire/templates/: contact.html  hamburger_menu.html  index.html  master.html  recommend.html  spotify_setup.html  user.html
digforfire/templates/style/: contact.html  hamburger_menu.html  master.html
digforfire/utils/: albums.py  loading.py  paths.py
embeddings/: embeddings.py  genre_space.py  tag_space.py
genres/: MusicBrainz-genres_repo.json  genre_repo.json  genres.py
libraries/: libraries.py
ml/: predictor.py
models/: models.py
recommender/: explorer.py  fetcher.py  recommend.py
scripts/: add_album.py
tags/: MusicBrainz-genres_repo-safe.json  MusicBrainz-genres_repo.json  MusicBrainz-genres_repo.txt  tags.py
types/: types.py
utils/: albums.py  loading.py  paths.py
